v0.8.3

Changes
-------
Renamed auto_justify to auto_fit
Save triggers in files
ui optimizations
`gt` command of normal mode renamed to `go`

+Added MultiSheet support
added :newsheet, :nextsheet, :prevsheet commands
`gt` and `gT` commands in normal mode are now used for moving between sheets
added new colors types SHEET, CURRENT_SHEET and FILENM


For v0.8.3 release
-------------------
free session / roman / sheets
reference cells from different sheets in formulas
UNDO should save reference to the sheet where the action took place
modify file functions to read roman struct
+ Show range detail in inputbar
+ Add GETENT in seval
+ create @counta, and modify @count to not count strings
+ Reeval of @lastrow @lastcol: check cells that uses @lastrow / @lastcol gets updated everytime it change


--
Thanks to all that helped and created PR.
Thanks to all who support and use this program.

Andrés Martinelli
andmarti1424

***********
v0.8.2

Changes
-------

+ Improved yank and undo alloc'ing. Malloc as much we need from start in a long batch and avoid small mallocs.

+ Changed the way lua scripts are referenced in formulas. Now they are input as any other string formula,
    like this: \"@lua("script_name.lua", 1)
    being 1 if the reference should be added to the depgraph or not, making it evaluated just once or
    every time the depgraph is evaluated.
    NOTE that if set to 0 and the cell is referenced by another cell, it will be executed nonetheless.

+ Added new exec_lua configuration variable.

+ Rows now can have height higher than one LINE. See fj and fk in normal mode or :formatrow in command mode.

+ Wrap cell content. new autowrap config value. works when nooverlap and notruncate are set.

+ Open URL or file specified on cell (PR 401)

+ Import mkd files

+ Multiple frozen rows/columns (fr / fc in normal mode)

Added mapping_timeout configuration variable with a default value of 1500ms (used to be a fixed value of 800ms).